--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a class="number-link" href="tel:+7812452525">8 812 450-25-25</a>
           </p>
         </div>
-      <div>
+      </div>
     </div>
         <!--container-->
   </header>
@@ -133,35 +133,35 @@
       </div>
     </section>
 
-    <section class="big-seller">
+    <section class="seller">
       <h2> Хиты продаж </h2>
-      <ul class="big-seller-list">
-        <li class="big-seller-item"><a href="#">
-            <p class="big-seller-link">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+      <ul class="seller-list">
+        <li class="seller-item"><a href="#">
+            <p class="seller-link">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
           </a>
           <p>
             <span class="price">310 Р/кг</span>
             <img src="images/icecream-one.png" width="267" height="267" alt="Мороженое">
           </p>
         </li>
-        <li class="big-seller-item"><a href="#">
-            <p class="big-seller-link">Сливочно-кофейное с кусочками шоколада</p>
+        <li class="seller-item"><a href="#">
+            <p class="seller-link">Сливочно-кофейное с кусочками шоколада</p>
           </a>
           <p>
             <span class="price">380 Р/кг</span>
             <img src="images/icecream-two.png" width="267" height="267" alt="Мороженое">
           </p>
         </li>
-        <li class="big-seller-item"><a href="#">
-            <p class="big-seller-link">Сливочно-клубничное с присыпкой из белого шоколада</p>
+        <li class="seller-item"><a href="#">
+            <p class="seller-link">Сливочно-клубничное с присыпкой из белого шоколада</p>
           </a>
           <p>
             <span class="price">355 Р/кг</span>
             <img src="images/icecream-three.png" width="267" height="267" alt="Мороженое">
           </p>
         </li>
-        <li class="big-seller-item"><a href="#">
-            <p class="big-seller-link">Сливочное крем-брюле с карамельной подливкой </p>
+        <li class="seller-item"><a href="#">
+            <p class="seller-link">Сливочное крем-брюле с карамельной подливкой </p>
           </a>
           <p>
             <span class="price">415 Р/кг</span>
