--- a/catalog.html
+++ b/catalog.html
@@ -11,88 +11,95 @@
     <link rel="icon" href="favicon.ico">
 </head>
 
-<body>
-    <header>
-        <nav>
-            <a><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
-            <ul>
-                <li>
-                    <a href="blank.html"> Каталог</a>
-                    <ul>
-                        <li><a href="#">Новинки</a></li>
-                        <li><a href="#">Сливочное</a></li>
-                        <li><a href="#">Щербеты</a></li>
-                        <li><a href="#">Фруктовый лед</a></li>
-                        <li><a href="#">Мелорин</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="blank.html">Доставка и оплата</a>
-                </li>
-                <li>
-                    <a href="blank.html">О компании</a>
-                </li>
+<body class="page-body inner-page">
+    <header class="main-header">
+        <div class="container">
+            <nav class="main-navigation">
+                <a class="main-header-logo"><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
+                <ul class="site-navigation">
+                    <li>
+                        <a class="site-navigation-link" href="#"> Каталог</a>
+                        <ul class="site-navigation site-navigation-inner">
+                            <li><a href="#">Новинки</a></li>
+                            <li><a href="#">Сливочное</a></li>
+                            <li><a href="#">Щербеты</a></li>
+                            <li><a href="#">Фруктовый лед</a></li>
+                            <li><a href="#">Мелорин</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="site-navigation-link" href="blank.html">Доставка и оплата</a>
+                    </li>
+                    <li>
+                        <a class="site-navigation-link" href="blank.html">О компании</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="user-navigation">
+                <div class="search-wrapper">
+                    <a class="search-link" href="#">Поиск</a>
+                    <form action="https://echo.htmlacademy.ru" method="POST">
+                        <p>
+                            <label>
+                                Поиск
+                                <input type="text" name="search" placeholder=" Крем-брюле">
+                            </label>
+                        </p>
+                        <button class="visually-hidden" type="submit">Поиск</button>
+                    </form>
+                </div> <!-- search-wrapper-->
+
+                <div class="login-wrapper">
+                    <a class=" login-link user-text" href="#">Вход</a>
+                    <form action="https://echo.htmlacademy.ru" method="POST">
+                        <p>
+                            <label for="login-login"> Логин </label>
+                            <input type="email" name="email" id="login-login" placeholder="email@example.com">
+                        </p>
+                        <p>
+                            <label for="login-password "> Пароль </label>
+                            <input type="password" name="password" id="login-password" placeholder="******">
+                        </p>
+                        <button type="submit">Войти</button>
+                        <p>
+                            <a href="#">Забыли пароль?</a>
+                            <a href="#">Новая регистрация</a>
+                        </p>
+                    </form>
+                </div>
+                <!--login-wrapper-->
+
+                <div class="basket">
+                    <p>
+                        <a href="#"> 2 товара</a>
+                    </p>
+                </div>
+                <!--basket-->
+
+                <div class="time-work">
+                    <p> с 10 до 20, ежедневно</p>
+                    <p>
+                        <a class="number-link" href="tel:+7812452525">8 812 450-25-25</a>
+                    </p>
+                </div>
+            </div>
+            <ul class="breadcrumbs">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a>Сливочное</a></li>
             </ul>
-        </nav>
-        <div class="search-wrapper">
-            <a class="search-link" href="#">Поиск</a>
-            <form action="https://echo.htmlacademy.ru" method="POST">
-                <p>
-                    <label>
-                        Поиск
-                        <input type="text" name="search" placeholder=" Крем-брюле">
-                    </label>
-                </p>
-                <button class="visually-hidden" type="submit">Поиск</button>
-            </form>
-        </div> <!-- search-wrapper-->
-
-        <div class="login-wrapper">
-            <a class=" login-link" href="#">Вход</a>
-            <form action="https://echo.htmlacademy.ru" method="POST">
-                <p>
-                    <label for="login-login"> Логин </label>
-                    <input type="email" name="email" id="login-login" placeholder="email@example.com">
-                </p>
-                <p>
-                    <label for="login-password"> Пароль </label>
-                    <input type="password" name="password" id="login-password" placeholder="******">
-                </p>
-                <button type="submit">Войти</button>
-                <p>
-                    <a href="#">Забыли пароль?</a>
-                    <a href="#">Новая регистрация</a>
-                </p>
-            </form>
         </div>
-        <!--login-wrapper-->
-
-        <div class="shopbasket">
-            <p>
-                <a href="#"> Пусто</a>
-            </p>
-        </div>
-        <!--shopping-basket-->
-
-        <div>
-            <p> с 10 до 20, ежедневно <br>
-                <a href="tel:+7812452525">8 812 450-25-25</a>
-            </p>
-        </div>
-        <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a>Сливочное</a></li>
-        </ul>
+        <!--container-->
     </header>
 
-    <main>
-        <h1>Сливочное мороженое</h1>
-        <section>
+    <main class="page-catalog container">
+        <h1 class="page-title">Сливочное мороженое</h1>
+        <section class="filters">
             <form action="https://echo.htmlacademy.ru" method="POST">
                 <fieldset>
                     <legend>Сортировка: </legend>
-                    <select>
+                    <select class="filters-option">
                         <option value="по популярности">по популярности </option>
                         <option value="сначала недорогие">сначала недорогие</option>
                         <option value="сначала дорогие">сначала дорогие</option>
@@ -101,7 +108,7 @@
                 </fieldset>
                 <fieldset>
                     <legend>Цена: 100 ₽ – 500 ₽ </legend>
-                    <input type="range" min="100" max="500" step="1">
+                    <input class="input-range" type="range" min="100" max="500" step="1">
                 </fieldset>
                 <fieldset>
                     <legend>Жирность: </legend>
@@ -130,183 +137,186 @@
                 <button type="submit">Применить</button>
             </form>
         </section>
-        <section>
+
+        <section class="seller">
             <h2>Список товара</h2>
-            <ul>
-                <li>
+            <ul class="seller-list">
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+                        <h3 class="seller-link">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-one.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-one.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>310 ₽/кг</p>
+                    <p class="price">310 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочно-кофейное с кусочками шоколада</h3>
+                        <h3 class="seller-link">Сливочно-кофейное с кусочками шоколада</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-two.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-two.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>380 ₽/кг</p>
+                    <p class="price">380 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+                        <h3 class="seller-link">Сливочно-клубничное с присыпкой из белого шоколада</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-three.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-three.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>355 ₽/кг</p>
+                    <p class="price">355 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочное крем-брюле с карамельной подливкой </h3>
+                        <h3 class="seller-link">Сливочное крем-брюле с карамельной подливкой </h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-four.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-four.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>415 ₽/кг</p>
+                    <p class="price">415 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочное с брусничным джемом</h3>
+                        <h3 class="seller-link">Сливочное с брусничным джемом</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-five.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-five.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>325 ₽/кг</p>
+                    <p class="price">325 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочно-черничное с цельными ягодами черники</h3>
+                        <h3 class="seller-link">Сливочно-черничное с цельными ягодами черники</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-six.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-six.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>410 ₽/кг</p>
+                    <p class="price">410 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочно-лимонное с карамельной присыпкой</h3>
+                        <h3 class="seller-link">Сливочно-лимонное с карамельной присыпкой</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-seven.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-seven.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>315 ₽/кг</p>
+                    <p class="price">315 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочное с шоколадной стружкой</h3>
+                        <h3 class="seller-link">Сливочное с шоколадной стружкой</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-eight.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-eight.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>320 ₽/кг</p>
+                    <p class="price">320 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочно-ванильное с кусочками шоколада</h3>
+                        <h3 class="seller-link">Сливочно-ванильное с кусочками шоколада</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-nine.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-nine.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>440 ₽/кг</p>
+                    <p class="price">440 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочноe с ментоловым сиропом</h3>
+                        <h3 class="seller-link">Сливочноe с ментоловым сиропом</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-ten.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-ten.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>435 ₽/кг</p>
+                    <p class="price">435 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочное с кусочками черного шоколада</h3>
+                        <h3 class="seller-link">Сливочное с кусочками черного шоколада</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-eleven.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-eleven.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>355 ₽/кг</p>
+                    <p class="price">355 ₽/кг</p>
                 </li>
-                <li>
+                <li class="seller-item">
                     <a href="#">
-                        <h3>Сливочное с мятным сиропом</h3>
+                        <h3 class="seller-link">Сливочное с мятным сиропом</h3>
                     </a>
                     <p>
-                        <img src="images/catalog/icecream-twelve.jpg" width="267" height="267" alt="Мороженое">
+                        <img src="images/catalog/icecream-twelve.png" width="267" height="267" alt="Мороженое">
                     </p>
-                    <p>420 ₽/кг</p>
+                    <p class="price">420 ₽/кг</p>
                 </li>
             </ul>
         </section>
-        <ul>
-            <li>
-                <a href="#">&#60;</a>
+        <ul class="pagination-list">
+            <li class="pagination-item pagination-item-stop">
+                <a>&#60;</a>
             </li>
-            <li>
+            <li class="pagination-item pagination-item-current">
                 <a>1</a>
             </li>
-            <li>
+            <li class="pagination-item">
                 <a href="#">2</a>
             </li>
-            <li>
+            <li class="pagination-item">
                 <a href="#">3</a>
             </li>
-            <li>
+            <li class="pagination-item">
                 <a href="#">4</a>
             </li>
-            <li>
+            <li class="pagination-item">
                 <a href="#">5</a>
             </li>
-            <li>
+            <li class="pagination-item">
                 <a href="#">&#62;</a>
             </li>
         </ul>
     </main>
 
 
-    <footer>
-        <section>
+    <footer class="footer container">
+        <section class="footer-social">
             <h2>Как нас найти</h2>
-            <ul>
-                <li>
-                    <a href="#">Фейсбук</a>
+            <ul class="social-list">
+                <li class="social-item">
+                    <a class="social-button" href="#"><span>Фейсбук</span></a>
                 </li>
-                <li>
-                    <a href="#">Вконтакте</a>
+                <li class="social-item">
+                    <a class="social-button" href="#"><span>Вконтакте</span></a>
                 </li>
-                <li>
-                    <a href="#">Инстаграм</a>
+                <li class="social-item">
+                    <a class="social-button" href="#"><span>Инстаграм</span></a>
                 </li>
-                <li>
-                    <a href="#">Твитер</a>
+                <li class="social-item">
+                    <a class="social-button" href="#"><span>Твитер</span></a>
                 </li>
             </ul>
         </section>
 
-        <section>
+        <section class="footer-info">
             <h2>Дополнительная инфомрация о нас</h2>
-            <ul>
-                <li>
+            <ul class="footer-info-list">
+                <li class="footer-info-item">
                     <a href="#">Для поставщиков</a>
                 </li>
-                <li>
+                <li class="footer-info-item">
                     <a href="#">О производстве</a>
                 </li>
-                <li>
+                <li class="footer-info-item">
                     <a href="#">Наши документы</a>
                 </li>
-                <li>
+                <li class="footer-info-item">
                     <a href="#">Экологические стандарты</a>
                 </li>
             </ul>
         </section>
-        <section>
-            <p><img src="images/logo-HTMLAcademy.svg" width="107.89" height="30.99" alt="HTML ACADEMY"></p>
-            <p>Сделано в <a href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
+        <section class="footer-copyright">
+            <p><img class="footer-logo" src="images/logo-HTMLAcademy.svg" width="107.89" height="30.99"
+                    alt="HTML ACADEMY">
+            </p>
+            <p class="copyright-link">Сделано в <a href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
         </section>
     </footer>
