--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div class="container">
       <nav class="main-navigation">
         <a class="main-header-logo"><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
-        <ul class="site-navigation">
+        <ul class="site-navigation site-navigation-wrapper">
           <li>
             <a class="site-navigation-link" href="catalog.html"> Каталог</a>
-            <ul class="site-navigation site-navigation-inner">
+            <!--<ul class="site-navigation site-navigation-inner">
               <li><a href="#">Новинки</a></li>
               <li><a href="#">Сливочное</a></li>
               <li><a href="#">Щербеты</a></li>
               <li><a href="#">Фруктовый лед</a></li>
               <li><a href="#">Мелорин</a></li>
-            </ul>
+            </ul>-->
           </li>
           <li>
             <a class="site-navigation-link" href="blank.html">Доставка и оплата</a>
@@ -34,59 +34,61 @@
             <a class="site-navigation-link" href="blank.html">О компании</a>
           </li>
         </ul>
+
+
+        <div class="user-navigation">
+          <div class="user-navigation-wrapper">
+            <div class="search-wrapper">
+              <a class="search-link" href="#">Поиск</a>
+              <!--<form action="https://echo.htmlacademy.ru" method="POST">
+                <p>
+                  <label>
+                    Поиск
+                    <input type="text" name="search" placeholder=" Крем-брюле">
+                  </label>
+                </p>
+                <button class="visually-hidden" type="submit">Поиск</button>
+              </form> -->
+            </div> <!-- search-wrapper-->
+
+            <div class="login-wrapper">
+              <a class=" login-link user-text" href="#">Вход</a>
+              <!--<form action="https://echo.htmlacademy.ru" method="POST">
+                <p>
+                  <label for="login-login"> Логин </label>
+                  <input type="email" name="email" id="login-login" placeholder="email@example.com">
+                </p>
+                <p>
+                  <label for="login-password "> Пароль </label>
+                  <input type="password" name="password" id="login-password" placeholder="******">
+                </p>
+                <button type="submit">Войти</button>
+                <p>
+                  <a href="#">Забыли пароль?</a>
+                  <a href="#">Новая регистрация</a>
+                </p>
+              </form> -->
+            </div>
+            <!--login-wrapper-->
+
+            <div class="basket">
+              <p>
+                <a href="#"> Пусто</a>
+              </p>
+            </div>
+            <!--basket-->
+
+            <div class="time-work">
+              <p> с 10 до 20, ежедневно</p>
+              <p>
+                <a class="number-link" href="tel:+7812452525">8 812 450-25-25</a>
+              </p>
+            </div>
+          </div>
+        </div>
       </nav>
-
-
-      <div class="user-navigation">
-        <div class="search-wrapper">
-          <a class="search-link" href="#">Поиск</a>
-          <form action="https://echo.htmlacademy.ru" method="POST">
-            <p>
-              <label>
-                Поиск
-                <input type="text" name="search" placeholder=" Крем-брюле">
-              </label>
-            </p>
-            <button class="visually-hidden" type="submit">Поиск</button>
-          </form>
-        </div> <!-- search-wrapper-->
-
-        <div class="login-wrapper">
-          <a class=" login-link user-text" href="#">Вход</a>
-          <form action="https://echo.htmlacademy.ru" method="POST">
-            <p>
-              <label for="login-login"> Логин </label>
-              <input type="email" name="email" id="login-login" placeholder="email@example.com">
-            </p>
-            <p>
-              <label for="login-password "> Пароль </label>
-              <input type="password" name="password" id="login-password" placeholder="******">
-            </p>
-            <button type="submit">Войти</button>
-            <p>
-              <a href="#">Забыли пароль?</a>
-              <a href="#">Новая регистрация</a>
-            </p>
-          </form>
-        </div>
-        <!--login-wrapper-->
-
-        <div class="basket">
-          <p>
-            <a href="#"> Пусто</a>
-          </p>
-        </div>
-        <!--basket-->
-
-        <div class="time-work">
-          <p> с 10 до 20, ежедневно</p>
-          <p>
-            <a class="number-link" href="tel:+7812452525">8 812 450-25-25</a>
-          </p>
-        </div>
-      </div>
     </div>
-        <!--container-->
+    <!--container-->
   </header>
 
   <main class="container">
@@ -171,7 +173,7 @@
       </ul>
     </section>
 
-    <section class="features">
+    <section class="features container">
       <h3>Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
       <ul class="features-list">
         <li class="features-item">
@@ -179,13 +181,14 @@
             и проверенных временем технологий.</p>
         </li>
         <li class="features-item">
-          <p> Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
-            дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-        </li>
-        <li class="features-item">
           <p> Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас
             связывает долговременное сотрудничество.</p>
         </li>
+        <li class="features-item">
+          <p> Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
+            дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+        </li>
+
         <li class="features-item">
           <p> Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает
             мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
@@ -194,24 +197,26 @@
     </section>
     <!--features-->
 
-    <article class="article">
-      <h2>Новости</h2>
-      <p>Новое в нашем блоге</p>
-      <p class="article-link"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
-    </article>
+    <div class="container news-wrapper">
+      <article class="article">
+        <h2>Новости</h2>
+        <p>Новое в нашем блоге</p>
+        <p class="article-link"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
+      </article>
 
-    <section class="subscribe">
-      <h2>Подписка</h2>
-      <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит.
-        Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-      <form class="subscribe-form" action="https://echo.htmlacademy.ru" method="POST">
-        <p class="subscribe-item">
-          <label for="subscribe">Адрес почты</label>
-          <input type="email" name="subscribe" id="subscribe" placeholder="email@example.com">
-        </p>
-        <button class="button subscribe-submit" type="submit">Отправить</button>
-      </form>
-    </section>
+      <section class="subscribe">
+        <h2>Подписка</h2>
+        <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит.
+          Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru" method="POST">
+          <p class="subscribe-item">
+            <label for="subscribe">Адрес почты</label>
+            <input type="email" name="subscribe" id="subscribe" placeholder="email@example.com">
+          </p>
+          <button class="button subscribe-submit" type="submit">Отправить</button>
+        </form>
+      </section>
+    </div>
 
     <section class="modal">
       <h2>Как до нас добраться</h2>
@@ -237,6 +242,7 @@
         </ul>
       </section>
 
+
       <section class="footer-info">
         <h2>Дополнительная инфомрация о нас</h2>
         <ul class="footer-info-list">
@@ -257,7 +263,7 @@
       <section class="footer-copyright">
         <p><img class="footer-logo" src="images/logo-HTMLAcademy.svg" width="107.89" height="30.99" alt="HTML ACADEMY">
         </p>
-        <p class="copyright-link">Сделано в <a  href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
+        <p class="copyright-link">Сделано в <a href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
       </section>
     </footer>
 
